реализовал хендлер поиска по словам в наименовании товара
