# polls/main_api_app/routes.py
@@ -7,7 +7,6 @@ def setup_routes(app):
     app.router.add_delete('/auth', views.logout)
 
     app.router.add_get('/products', views.new_products)
-    app.router.add_get('/products/popular', views.popular_products)
     app.router.add_get('/products/{id}', views.product)
     app.router.add_get('/products/search/{pattern}', views.search_products)
 
